# trading

./: .env.example  .gitattributes  .gitignore  README.md  implementation_plan.md  pyproject.toml
deploy/: README.md  install_windows_tasks.ps1  start_dashboard.sh  start_scheduler.sh  watchdog.sh
migrations/: env.py
migrations/versions/: 00f5798d2664_add_risk_tables_equity_snapshots_api_.py  a4f91c2d5e83_add_macro_regime_snapshots.py  b27de9aa16ec_initial_schema_v2.py  c6c1dea749a6_initial_schema_with_dedup_key.py
scripts/: smoke_test.py  status.py  status.sh
src/jay_trading/: __init__.py  cli.py  config.py
src/jay_trading/dashboard/: __init__.py  app.py  data.py
src/jay_trading/data/: alpaca_client.py  db.py  edgar.py  fmp.py  fred.py  models.py  price_cache.py  store.py
src/jay_trading/executor/: order_builder.py  portfolio.py  reconcile.py
src/jay_trading/risk/: api_health.py  equity_tracker.py  guards.py  macro_regime.py  sizing.py
src/jay_trading/schedule/: jobs.py  service.py
src/jay_trading/signals/: cluster_detector.py  confluence.py  insider_cluster_detector.py  insider_scorer.py  politician_scorer.py
tests/: conftest.py  test_alpaca_client.py  test_api_health.py  test_cluster_detector.py  test_config.py  test_confluence.py  test_edgar.py  test_equity_tracker.py  test_fmp_normalize.py  test_fred.py  test_guards.py  test_insider_cluster_detector.py  test_insider_follow.py  test_insider_scorer.py  test_macro_regime.py  test_sizing.py  test_smart_copy.py  test_store.py  test_store_risk.py  test_templates.py  test_vault_writer.py
(+6 files in other folders)
